examples/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: test-api
spec:
  selector:
    app: test-api
  ports:
  - port: 8000
    targetPort: 8000
