examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  tls:
    - hosts:
      - XXXX.kaj.pouta.csc.fi
  rules:
  - host: XXXX.kaj.pouta.csc.fi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-api
            port:
              number: 8000
